# rinha-backend-2023

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  nginx.conf
.sqlx/: query-7db0c3714ea8b642ae2e9cf1b1fd9e1ab8fe627725e06ea981f8d96cb7135738.json  query-c44f9c89824e1ed029391fad6438720a2fb3bf3e7f17b322cc45d6868967a3e4.json
db/: v001__create_people.sql
src/: main.rs  persistence.rs
